css/help2.css
/* ... */
#help2-main .usemega-img{
  background-image: url(../images/mega/help2/welcome_icons.png);
  background-position:-100px -150px;
}
#help2-main .browsearticle-button {
  display: block;
  width: 100%;
  margin-top: 0px;
}
#help2-main .browsearticle-button span {
  text-align: center;
  font-family: 'source_sans_proregular';
  font-size: 16px;
  color: #ff4444;
  padding: 2px 16px;
  position: relative;
  cursor: pointer;
  display: block;
  margin: 0 auto;
}
#help2-main .browsearticle-button .article-arrow{
  background-image: url(../images/mega/help2/welcome_icons.png);
  width: 7px;
  display: inline-block;
  height: 12px;
  background-position: -133px -314px;
  margin-top: 4px;
  margin-left:14px;
}
#help2-main .email-button span {
  text-align: center;
  font-family: 'source_sans_proregular';
  font-size: 14px;
  color: #FFFFFF;
  position: relative;
  display: table;
  margin: 0 auto;
  cursor: pointer;
  margin-top: 24px;
  margin-bottom: 124px;
   line-height: 36px;
  width: 28%;
  background: #FFFFFF;
  border: 1px solid rgba(0,0,0,0.15);
  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.15);
  border-radius: 3px;
  font-family: 'source_sans_proregular';
  font-size: 13px;
  color: #666;
   transition-property:box-shadow, color;
  -moz-transition-property: box-shadow, color; /* Firefox 4 */
  -webkit-transition-property:box-shadow, color; /* Safari and Chrome */
  -o-transition-property:box-shadow, color; /* Opera */

  transition-duration: .3s;
  -moz-transition-duration: .3s; /* Firefox 4 */
  -webkit-transition-duration: .3s; /* Safari and Chrome */
  -o-transition-duration: .3s; /* Opera */

  transition-timing-function: ease;
  -moz-transition-timing-function: ease; /* Firefox 4 */
  -webkit-transition-timing-function: ease; /* Safari and Chrome */
  -o-transition-timing-function: ease; /* Opera */
}
#help2-main .first-support-block .email-button span{
  width: 20%;
}
#help2-main .email-button span:hover{
  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.15), inset 0px 0px 0px 0px rgba(0,0,0,0.10);
  cursor: pointer;
  color: #ff4444;
  transition-property:box-shadow, color;
  -moz-transition-property: box-shadow, color; /* Firefox 4 */
  -webkit-transition-property:box-shadow, color; /* Safari and Chrome */
  -o-transition-property:box-shadow, color; /* Opera */

  transition-duration: .3s;
  -moz-transition-duration: .3s; /* Firefox 4 */
  -webkit-transition-duration: .3s; /* Safari and Chrome */
  -o-transition-duration: .3s; /* Opera */

  transition-timing-function: ease;
  -moz-transition-timing-function: ease; /* Firefox 4 */
  -webkit-transition-timing-function: ease; /* Safari and Chrome */
  -o-transition-timing-function: ease; /* Opera */
}
#help2-main .popular-question-title,
#help2-main .support-block-title {
  font-family: 'source_sans_prolight';
  font-size: 32px;
  color: #000000;
  line-height: 30px;
  text-align: center;
}
#help2-main .popular-question-title {
    padding-bottom: 20px;
    padding-top: 40px;
}
#help2-main .search-section-header .popular-question-block {
    display: none;
    margin-left: 12%;
    margin-right: 12%;
    padding-top: 20px;
    z-index: 999;
    border-top: none;
}
#help2-main .popular-question-block {
    border-top: 1px solid #eee;
    display: block;
    margin-top: 10px;
    overflow: auto;
  }
#help2-main .search-section-header .popular-question-title {
    color: #444;
    font-size: 36px;
    padding-bottom: 30px;
}
#help2-main .search-section-header .popular-question-items li {
    color: #666;
    cursor: pointer;
    font-family: "source_sans_proregular";
    font-size: 14px;
    letter-spacing: 0.2px;
    line-height: 18px;
    margin-bottom: 22px;
    margin-right: 12px;
    padding-bottom: 22px;
    position: relative;
    text-align: left;
}
#help2-main .search-section-header .popular-question-items a,
#help2-main .popular-question-items a {
  text-decoration: none;
  color: #555;
  display: block;
  margin-top: -35px;
  margin-left: 20px;
  line-height: 22px;
  cursor: pointer;
  transition-property:margin-left, color;
  -moz-transition-property: margin-left, color; /* Firefox 4 */
  -webkit-transition-property:margin-left, color; /* Safari and Chrome */
  -o-transition-property:margin-left, color; /* Opera */

  transition-duration: .3s;
  -moz-transition-duration: .3s; /* Firefox 4 */
  -webkit-transition-duration: .3s; /* Safari and Chrome */
  -o-transition-duration: .3s; /* Opera */

  transition-timing-function: ease;
  -moz-transition-timing-function: ease; /* Firefox 4 */
  -webkit-transition-timing-function: ease; /* Safari and Chrome */
  -o-transition-timing-function: ease; /* Opera */
}
#help2-main .search-section-header .popular-question-list,
#help2-main .popular-question-list  {
  width: 45%;
  display: block;
  margin-top: 40px;
  float: left;
}
#help2-main .search-section-header .popular-question-list:nth-child(2),
#help2-main .popular-question-list:nth-child(2) {
  margin-left: 50px;
  margin-right: 20px;
}
#help2-main .popular-question-list ul {
  display: block;
  margin-block-end: 1em;
  margin-block-start: 1em;
  padding-inline-start: 00px;
}
.help-home-page{
  background-color: #fafafa !important;
}
#help2-main .search-section-header .popular-question-items,
#help2-main .popular-question-items {
  -webkit-columns: 1;
  -moz-columns: 1;
  columns: 1;
  column-gap: 30px;
  -moz-column-gap: 30px;
  -webkit-column-gap: 30px;
}
#help2-main .popular-question-items li {
    font-family: 'source_sans_proregular';
    font-size: 14px;
    color: #555;
    padding-bottom: 18px;
    position: relative;
    margin: 4px 20px 25px 2px;
}
#help2-main .first-support-block {
  height: 200px;
  padding-top: 40px;
  border-top: 1px solid #e8e8e8;
  margin: 20px auto 0;
}
#help2-main .search-support-block {
  height: 100px;
  padding-top: 60px;
  border-top: 1px solid #e8e8e8;
  margin: 50px auto 0px;
  padding-left: 50px;
  padding-right: 50px;
}
/* ... */

